# PiDown

./: .gitignore  README.md  dev.bat  dev.sh  download.html  package.ps1  scratch_test.js
.github/workflows/: package.yml
chrome-extension/: PRIVACY.md  README.md  manifest.json  rules.json
chrome-extension/native-host/: com.pidownloader.bridge.example.json  com.pidownloader.bridge.json  register-windows.example.ps1
chrome-extension/src/: background.js  content-styles.js  content-utils.js  content.js  options.html  options.js  popup.html  popup.js  styles.css
chrome-extension/src/background/: config.js  download-capture.js  native-client.js  utils.js  video-sniffer.js
docs/: AGENT-UIUX-GUIDELINES.md  PiDownloader 下载任务设计.md  PiDownloader 前端目录结构.md  PiDownloader 技术结构设计书.md  PiDownloader 核心目录结构设计.md  civitai_download_analysis.md  google_drive_download_analysis.md  gosh-dl-bt-features.md  gosh-dl核心能力开发文档.md  gosh_dl_http_gaps_analysis.md  pidownloader-optimization-analysis.md  uiux-analysis-report.md  walkthrough.md  webdav分析文档.md  常用 UI 组件列表及设计规范文档.md
docs/demo/: chromeext.html
docs/report/: mvp-analysis-report.md  performance-optimization-suggestions.md  project-decoupling-suggestions.md  project_analysis.md
frontend/: eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/core/: audio.ts  datetime.ts  error.ts  eventBus.ts  i18n.ts  locale.ts  motion.ts  notification.ts  taskFilters.ts  taskTableLayout.ts  transfer.ts  ui-tokens.ts
frontend/src/hooks/: useWebDavDevices.ts
frontend/src/locales/: en-US.json  zh-CN.json
frontend/src/themes/: animal-island-clean.css  components.tsx  (+2 more)
gosh-dl/: Cargo.toml
gosh-dl/src/: engine.rs  types.rs
gosh-dl/tests/: integration_tests.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: agent.rs  backgrounds.rs  checksum.rs  clipboard.rs  dialog.rs  extension.rs  fonts.rs  mod.rs  settings.rs  task.rs  webdav.rs  window.rs
src-tauri/src/commands/task/: bt.rs  category.rs  core_ops.rs  file_utils.rs  tag.rs
src-tauri/src/core/: app_paths.rs  categories.rs  mod.rs  models.rs  native_bridge.rs  settings.rs  state.rs  store.rs  webdav.rs  window_state.rs
src-tauri/src/core/state/: classification.rs  file_actions.rs  settings_state.rs  task_format.rs  task_service.rs
src-tauri/src/core/store/: backgrounds.rs  classification.rs  impl_repository.rs  repository.rs  rules.rs  schema.rs  settings_store.rs  task_tags.rs  tasks.rs  tests.rs  webdav.rs
src-tauri/src/download/: aria2_engine.rs  aria2_provider.rs  aria2_tests.rs  bt.rs  engine.rs  engine_tests.rs  ffmpeg_engine.rs  gosh_provider.rs  hls.rs  hls_provider.rs  manager.rs  mod.rs  protocol.rs  protocols.rs  provider.rs
src-tauri/src/download/protocols/: webdav_stream.rs
src-tauri/src/events/: mod.rs  reporter.rs  ticker.rs
(+128 files in other folders)
