[package]
name = "app"
version = "0.0.2"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["protocol-asset", "tray-icon", "macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
gosh-dl = { path = "../gosh-dl" }
serde_bencode = "0.2"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "6.0"
arboard = { version = "3.6.1", default-features = false }
rfd = "0.16.0"
md5_digest = { package = "md-5", version = "0.10.6" }
sha1 = "0.10.6"
sha2 = "0.10.9"
base64 = "0.22"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "charset", "http2"] }
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg", "webp"] }
raw-window-handle = "0.6"
urlencoding = "2.1"
libc = "0.2"
m3u8-rs = "6.0.0"
async-trait = "0.1"
opendal = { version = "0.52.0", features = ["services-webdav"] }




